# 3dsmc-ar-voxel-carving

./: CMakeLists.txt  README.md  arucodetector.py  preprocessing.py  sampreprocessing.py
include/: Eigen.h  MarchingCubes.h  SimpleMesh.h  Volume.h  detect_markers.h  marching_cubes.h
src/: Volume.cpp  camera_calibration.cpp  detect_markers.cpp  marching_cubes.cpp  postprocessing.cpp  voxel_carving.cpp
